# rnd

./: Cargo.toml  README.md  rustfmt.toml
src/: error.rs  main.rs
